Moves dev dependencies to appropriate place in package.json & updates webpack to allow eslint jsx entrypoint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,11 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx"]
+      }
     }
   },
   "root": true
