--- a/package.json
+++ b/package.json
@@ -3,33 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "camelcase": "^5.2.0",
+    "dotenv": "6.2.0",
+    "dotenv-expand": "5.1.0",
+    "fs-extra": "7.0.1",
+    "is-wsl": "^1.1.0",
+    "ramda": "^0.26.1",
+    "react": "^16.9.0",
+    "react-app-polyfill": "^1.0.3",
+    "react-dev-utils": "^9.0.4",
+    "react-dom": "^16.9.0",
+    "semver": "6.3.0",
+    "tachyons": "^4.11.1"
+  },
+  "devDependencies": {
     "@babel/core": "7.6.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@svgr/webpack": "4.3.2",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
-    "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
-    "dotenv-expand": "5.1.0",
     "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-config-react-app": "^5.0.2",
-    "eslint-loader": "3.0.0",
+    "eslint-loader": "^3.0.0",
     "eslint-plugin-flowtype": "3.13.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
@@ -42,17 +55,12 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "ramda": "^0.26.1",
-    "react": "^16.9.0",
-    "react-app-polyfill": "^1.0.3",
-    "react-dev-utils": "^9.0.4",
-    "react-dom": "^16.9.0",
+    "prettier": "^2.1.2",
+    "prop-types": "^15.7.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
-    "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "tachyons": "^4.11.1",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
@@ -61,21 +69,14 @@
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.3.1"
   },
-  "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2"
-  },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --watchAll=false",
     "test:watch": "node scripts/test.js --watchAll",
     "test:update-snapshot": "jest --watchAll=false --updateSnapshot",
-    "eslint": "eslint . --ext .js,.jsx",
-    "eslint-fix": "eslint --fix . --ext .js,.jsx"
+    "eslint": "eslint . --debug --ext .js,.jsx",
+    "eslint:fix": "eslint --fix . --ext .js,.jsx"
   },
   "browserslist": {
     "production": [
