--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.20.0",
     "camelcase": "^5.2.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
