--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv-expand": "5.1.0",
     "fs-extra": "7.0.1",
     "is-wsl": "^1.1.0",
+    "leaflet": "^1.7.1",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
     "react": "^16.9.0",
@@ -27,6 +28,7 @@
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
