--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.9.0",
     "semver": "6.3.0",
-    "tachyons": "^4.11.1"
+    "tachyons": "^4.11.1",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.6.0",
@@ -64,11 +65,11 @@
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "style-loader": "1.0.0",
-    "terser-webpack-plugin": "1.4.1",
+    "terser-webpack-plugin": "^4.2.3",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
     "webpack": "4.40.2",
-    "webpack-dev-server": "3.2.1",
+    "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.3.1"
   },
