--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dotenv-expand": "5.1.0",
     "fs-extra": "7.0.1",
     "is-wsl": "^1.1.0",
-    "leaflet": "^1.7.1",
+    "mapbox-gl": "^1.12.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
     "react": "^16.9.0",
