--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
+    "rc-tooltip": "^4.2.3",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.3",
     "react-dev-utils": "^9.0.4",
