--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
+    "husky": "^4.3.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
@@ -68,6 +69,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "prettier": "^2.1.2",
+    "pretty-quick": "^3.0.2",
     "react-test-renderer": "^16.13.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
